// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreBar has custom palette 1`] = `
<ScoreBar
  className="css-omtyju-StyledScoreBar eecxaw40"
  palette={
    Array [
      "white",
      "red",
      "red",
      "pink",
      "pink",
      "purple",
      "purple",
      "black",
    ]
  }
  score={7}
  size={60}
  thickness={2}
  vertical={true}
/>
`;

exports[`ScoreBar renders 1`] = `
<ScoreBar
  className="css-1bwukz9-StyledScoreBar eecxaw40"
  palette={
    Array [
      "#ec5e44",
      "#f38259",
      "#f9a66d",
      "#98b480",
      "#57be8c",
    ]
  }
  score={3}
  size={60}
  thickness={2}
/>
`;

exports[`ScoreBar renders vertically 1`] = `
<ScoreBar
  className="css-omtyju-StyledScoreBar eecxaw40"
  palette={
    Array [
      "#ec5e44",
      "#f38259",
      "#f9a66d",
      "#98b480",
      "#57be8c",
    ]
  }
  score={2}
  size={60}
  thickness={2}
  vertical={true}
/>
`;

exports[`ScoreBar renders with < 0 score 1`] = `
<ScoreBar
  className="css-1bwukz9-StyledScoreBar eecxaw40"
  palette={
    Array [
      "#ec5e44",
      "#f38259",
      "#f9a66d",
      "#98b480",
      "#57be8c",
    ]
  }
  score={-2}
  size={60}
  thickness={2}
/>
`;

exports[`ScoreBar renders with score = 0 1`] = `
<ScoreBar
  className="css-1bwukz9-StyledScoreBar eecxaw40"
  palette={
    Array [
      "#ec5e44",
      "#f38259",
      "#f9a66d",
      "#98b480",
      "#57be8c",
    ]
  }
  score={0}
  size={60}
  thickness={2}
/>
`;

exports[`ScoreBar renders with score > max score 1`] = `
<ScoreBar
  className="css-1bwukz9-StyledScoreBar eecxaw40"
  palette={
    Array [
      "#ec5e44",
      "#f38259",
      "#f9a66d",
      "#98b480",
      "#57be8c",
    ]
  }
  score={10}
  size={60}
  thickness={2}
/>
`;
